Adjust spacing to prevent overlap of the mobile button

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#root {
+  height: 100%;
+  margin-bottom: 12rem;
+}
+
 .header {
   display: flex;
   justify-content: center;
